tests/invalid/i16_literal_overflow.ar
fn main()
{
    let a: i16 = 32768;
}
